# fleur

./: .coverage  .gitignore  .prettierignore  404.html  MANIFEST.in  README.md  README.qmd  coverage.xml  index.html  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  sandbox2.py  setup.py  sitemap.xml
.claude/: settings.local.json
.github/workflows/: doc.yaml  tests.yaml  type.yaml
about/: index.html
contributing/: index.html
dev/: index.html
dev/code-structure/: index.html
dev/environment/: index.html
doc/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  sg_execution_times.rst
doc/source/_autosummary/: inferplot.betweenstats.rst  inferplot.datasets.load_data.rst  inferplot.datasets.load_iris.rst  inferplot.datasets.rst  inferplot.rst  inferplot.scatterstats.rst  inferplot.utils.rst  inferplot.utils.theme.rst  inferplot.utils.utils.rst
doc/source/auto_examples/: index.rst  scatterstats_customization.codeobj.json  scatterstats_customization.ipynb  scatterstats_customization.py  scatterstats_customization.rst  sg_execution_times.rst
docs/: README.qmd  about.md  contributing.md  examples.md  index.md
docs/API/: scatter_corr.md
docs/API-reference/: scatterstats.md
docs/dev/: code-structure.md  environment.md  index.md
docs/examples/: barstats.md  betweenstats.md  quick-start.md  scatterstats.md
docs/reference/: barstats.md  betweenstats.md  datasets.md  scatterstats.md
docs/source/: conf.py  examples.rst  index.rst
docs/source/_autosummary/: inferplot.between.rst
docs/stylesheets/: extra.css  style.css
examples/: index.html
examples/barstats/: index.html
examples/betweenstats/: index.html
examples/quick-start/: index.html
examples/scatterstats/: index.html
fleur/: __init__.py  barstats.py  betweenstats.py  cls_scatterstats.py  datasets.py  input_data_handling.py  scatterstats.py
fleur/_utils/: __init__.py  beeswarm.py  count_decimals.py  infer_types.py  input_data_handling.py  theme.py
fleur/data/: __init__.py  datasets.py
fleur/upstream/: __init__.py  beeswarm.py
fleur/utils/: theme.py
inferplot/: __init__.py  between.py  betweenstats.py  data_input.py  datasets.py  scatter_corr.py  scatterstats.py
inferplot/_utils/: __init__.py  infer_types.py
inferplot/datasets/: __init__.py  load_data.py
inferplot/utils/: __init__.py  theme.py
javascript/: extra.js
overrides/partials/: footer.html
reference/barstats/: index.html
reference/betweenstats/: index.html
reference/datasets/: index.html
reference/scatterstats/: index.html
reports/coverage/: coverage.xml
scripts/: coverage.sh
search/: search_index.json
stylesheets/: style.css
tests/: test_barstats.py  test_betweenstats.py  test_input_data_handling.py  test_load_data.py  test_scatterstats.py  test_utils.py
