[project]
name = "inferplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "narwhals>=1.28.0",
    "scipy>=1.15.1",
]

[dependency-groups]
dev = [
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pre-commit>=4.1.0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
]

[tool.setuptools]
include-package-data = true
