[project]
name = "inferplot"
description = "Description"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["stats", "visualization"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "matplotlib>=3.9.4",
    "narwhals>=1.28.0",
    "scipy>=1.13.1",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inferplot"]

[tool.uv.sources]
inferplot = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.5",
    "mkdocs-matplotlib>=0.10.1",
]
quarto = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
]

[project.urls]
Homepage = "https://y-sunflower.github.io/inferplot/"
Issues = "https://github.com/y-sunflower/inferplot/issues"
Documentation = "https://y-sunflower.github.io/inferplot/"
Repository = "https://github.com/y-sunflower/inferplot"
