[project]
name = "fleur"
description = "Combining statistics with visualization for Python"
version = "0.0.4"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["statistics", "visualization", "data", "annotations", "reproductibility"]
authors = [
  { name="Joseph Barbier", email="joseph.barbierdarnal@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "matplotlib>=3.10",
    "narwhals>=1.41.0",
    "scipy>=1.13.1",
]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fleur"]

[tool.uv.sources]
fleur = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.5",
    "mkdocs-matplotlib>=0.10.1",
    "polars>=1.30.0",
    "pandas>=2.2.3",
    "pytest-cov>=6.1.1",
    "genbadge>=1.1.2",
    "ty>=0.0.1a12",
]
quarto = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
]
readme = [
    "great-tables>=0.17.0",
]

[project.urls]
Homepage = "https://y-sunflower.github.io/fleur/"
Issues = "https://github.com/y-sunflower/fleur/issues"
Documentation = "https://y-sunflower.github.io/fleur/"
Repository = "https://github.com/y-sunflower/fleur"

[tool.ty.src]
include = ["fleur"]
exclude = ["tests", "sandbox.py", "docs"]
